# Rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
01_basics/: Cargo.toml
01_basics/challenges/: 01_variables.rs  02_data_types.rs  03_operators.rs  04_tuples_arrays.rs  05_strings.rs  06_input.rs  07_conditionals.rs  08_loops.rs  09_functions.rs  10_structs.rs  11_enums.rs  12_ownership.rs  13_references.rs  14_slices.rs  15_vectors.rs  16_hashmaps.rs  17_errors.rs  18_traits.rs  19_iterators_closures.rs  20_testing.rs
02_hex_viewer/: Cargo.toml
02_hex_viewer/src/: main.rs
03_safe_shell/: Cargo.toml
03_safe_shell/src/: main.rs
04_advanced/: .gitignore  Cargo.toml
04_advanced/challenges/: 01_smart_pointers.rs  02_concurrency.rs  03_unsafe.rs  04_async.rs  05_macros.rs
